removed data-settings-theme selector and created function for them change

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             <select class="overlay__input overlay__input_select" data-settings-theme name="theme">
               <option value="day">Day</option>
-              <option value="night">Night</option>
+              <option value="night" selected>Night</option>
             </select>
           </label>
         </form>
